classification tester update

--- a/Data_reading.ipynb
+++ b/Data_reading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_name = ['Blind', 'Disability']\n",
+    "dataset_name = ['ADHD', 'Blind', 'Disability']\n",
     "df_list = []\n",
     "for d in dataset_name:\n",
     "    df_list.append(pd.read_csv(f'datasets/2nd_filtering/{d}_relevance.csv', index_col=0))\n"
@@ -24,13 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====dataset:ADHD======\n",
+      "Posts:56197\n",
+      "Tokens:10812473\n",
+      "Types:5613877\n",
+      "TTR:519.2\n",
+      "Avg. of tokens:192.4\n",
+      "Avg. of types:99.9\n",
+      "Sentiment ratio:1.06\n",
+      "Relevance ratio:13.64\n",
       "=====dataset:Blind======\n",
       "Posts:1008\n",
       "Tokens:214930\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +431,7 @@
        "[2434 rows x 17 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,9 +442,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1798934328.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    df['post_sentiment_label'].apply(lambda x: if x == 'negative' then 1, else 0)\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "df['post_sentiment_label'].apply(lambda x: if x == 'negative' then 1, else 0)"
    ]
