--- a/Data_reading.ipynb
+++ b/Data_reading.ipynb
@@ -80,7 +80,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = pd.read_csv('all_predictions.csv', index_col =0)\n",
+    "scores = pd.read_csv('all_scores.csv', index_col =0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = []\n",
+    "for m in scores['model'].unique():\n",
+    "    score = scores[(scores['dataset'] == 'Disability') & (scores['model'] == m)]\n",
+    "    summary.append({'model': m, 'acc': score['acc'].mean(), 'prec': score['prec'].mean(), 'rec': score['rec'].mean(), 'f1-score': score['f1-score'].mean()})\n",
+    "pd.DataFrame(summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -104,366 +127,84 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>commentator_id</th>\n",
-       "      <th>created_utc</th>\n",
-       "      <th>anonymized_body</th>\n",
-       "      <th>ups</th>\n",
-       "      <th>downs</th>\n",
-       "      <th>score</th>\n",
-       "      <th>controversiality</th>\n",
-       "      <th>gilded</th>\n",
-       "      <th>distinguished</th>\n",
-       "      <th>anonymized_body_lemmatized</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>post_sentiment_label</th>\n",
-       "      <th>post_sentiment_score</th>\n",
-       "      <th>Relevance</th>\n",
-       "      <th>token_count</th>\n",
-       "      <th>token_type_count</th>\n",
+       "      <th>model</th>\n",
+       "      <th>acc</th>\n",
+       "      <th>prec</th>\n",
+       "      <th>rec</th>\n",
+       "      <th>f1-score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>d7102c6d-8843-42d3-9035-e9253756bec2</td>\n",
-       "      <td>1520919167</td>\n",
-       "      <td>That is the dumbest, most fucking moronic, abs...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['That', 'be', 'the', 'dumb', ',', 'most', 'fu...</td>\n",
-       "      <td>dumb</td>\n",
-       "      <td>1</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>0.962408</td>\n",
-       "      <td>0</td>\n",
-       "      <td>41</td>\n",
-       "      <td>36</td>\n",
+       "      <td>llama2_7b_pred</td>\n",
+       "      <td>0.585</td>\n",
+       "      <td>0.547472</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.707261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>b18391f5-f332-4a01-abce-b2ceac6edd07</td>\n",
-       "      <td>1534343659</td>\n",
-       "      <td>Oh God, I would be so mad if it happened to me...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['Oh', 'God', ',', 'I', 'would', 'be', 'so', '...</td>\n",
-       "      <td>dumb</td>\n",
-       "      <td>1</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>0.958311</td>\n",
-       "      <td>1</td>\n",
-       "      <td>41</td>\n",
-       "      <td>34</td>\n",
+       "      <td>llama2_13b_pred</td>\n",
+       "      <td>0.850</td>\n",
+       "      <td>0.888889</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.842105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>e0091820-6a35-48e5-ba85-852744602eab</td>\n",
-       "      <td>1523895434</td>\n",
-       "      <td>That's insane. I wish I had advice but everyth...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['That', \"'s\", 'insane', '.', 'I', 'wish', 'I'...</td>\n",
-       "      <td>insane</td>\n",
-       "      <td>1</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>0.952975</td>\n",
-       "      <td>1</td>\n",
-       "      <td>37</td>\n",
-       "      <td>31</td>\n",
+       "      <td>TimeLMs_label</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dced99b7-127f-46e5-ac13-25617289d8de</td>\n",
-       "      <td>1576870204</td>\n",
-       "      <td>The fact this is true absolutely disgusting. A...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['The', 'fact', 'this', 'be', 'true', 'absolut...</td>\n",
-       "      <td>idiot</td>\n",
-       "      <td>1</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>0.952214</td>\n",
-       "      <td>1</td>\n",
-       "      <td>62</td>\n",
-       "      <td>46</td>\n",
+       "      <td>hatexplain_label</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ae1d583b-4102-4607-878f-140dd09a6dc9</td>\n",
-       "      <td>1568170862</td>\n",
-       "      <td>This just makes me sick to my stomach. I guess...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['This', 'just', 'make', 'me', 'sick', 'to', '...</td>\n",
-       "      <td>crazy</td>\n",
-       "      <td>1</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>0.951125</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>19</td>\n",
+       "      <td>llama2_7b_FL_pred</td>\n",
+       "      <td>0.730</td>\n",
+       "      <td>0.652871</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.786254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2429</th>\n",
-       "      <td>c836fe63-9b04-479d-b32b-91a8a6bae550</td>\n",
-       "      <td>1565857708</td>\n",
-       "      <td>Well I think the more people see us the better...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['Well', 'I', 'think', 'the', 'more', 'people'...</td>\n",
-       "      <td>insane</td>\n",
-       "      <td>1</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>0.545418</td>\n",
-       "      <td>1</td>\n",
-       "      <td>142</td>\n",
-       "      <td>86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2430</th>\n",
-       "      <td>8a907d88-0ee4-4f5a-b825-3a402eece10b</td>\n",
-       "      <td>1534246672</td>\n",
-       "      <td>Yep the ZRA and the Aero Z are the adjustable ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['Yep', 'the', 'ZRA', 'and', 'the', 'Aero', 'Z...</td>\n",
-       "      <td>crazy</td>\n",
-       "      <td>1</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>0.533189</td>\n",
-       "      <td>1</td>\n",
-       "      <td>199</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2431</th>\n",
-       "      <td>20c8c6aa-d750-4c93-a6b4-1f7e4cfab376</td>\n",
-       "      <td>1461817158</td>\n",
-       "      <td>This is a very ambitious topic and I respect y...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['This', 'be', 'a', 'very', 'ambitious', 'topi...</td>\n",
-       "      <td>crazy</td>\n",
-       "      <td>1</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>0.523853</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1135</td>\n",
-       "      <td>426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2432</th>\n",
-       "      <td>7e36148b-2b74-4bba-b469-eb50434fa64b</td>\n",
-       "      <td>1423936148</td>\n",
-       "      <td>Its strange- I grew up out here and then moved...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['Its', 'strange-', 'I', 'grow', 'up', 'out', ...</td>\n",
-       "      <td>slow</td>\n",
-       "      <td>1</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>0.473465</td>\n",
-       "      <td>1</td>\n",
-       "      <td>331</td>\n",
-       "      <td>196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2433</th>\n",
-       "      <td>c1511445-04a7-4fde-ad57-492e7659b3df</td>\n",
-       "      <td>1574765396</td>\n",
-       "      <td>The only exercise that I can do is gentle swim...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['The', 'only', 'exercise', 'that', 'I', 'can'...</td>\n",
-       "      <td>cripple</td>\n",
-       "      <td>1</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>0.440805</td>\n",
-       "      <td>1</td>\n",
-       "      <td>116</td>\n",
-       "      <td>71</td>\n",
+       "      <th>5</th>\n",
+       "      <td>llama2_13b_FL_pred</td>\n",
+       "      <td>0.665</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.494505</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2434 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            commentator_id  created_utc  \\\n",
-       "0     d7102c6d-8843-42d3-9035-e9253756bec2   1520919167   \n",
-       "1     b18391f5-f332-4a01-abce-b2ceac6edd07   1534343659   \n",
-       "2     e0091820-6a35-48e5-ba85-852744602eab   1523895434   \n",
-       "3     dced99b7-127f-46e5-ac13-25617289d8de   1576870204   \n",
-       "4     ae1d583b-4102-4607-878f-140dd09a6dc9   1568170862   \n",
-       "...                                    ...          ...   \n",
-       "2429  c836fe63-9b04-479d-b32b-91a8a6bae550   1565857708   \n",
-       "2430  8a907d88-0ee4-4f5a-b825-3a402eece10b   1534246672   \n",
-       "2431  20c8c6aa-d750-4c93-a6b4-1f7e4cfab376   1461817158   \n",
-       "2432  7e36148b-2b74-4bba-b469-eb50434fa64b   1423936148   \n",
-       "2433  c1511445-04a7-4fde-ad57-492e7659b3df   1574765396   \n",
-       "\n",
-       "                                        anonymized_body  ups  downs  score  \\\n",
-       "0     That is the dumbest, most fucking moronic, abs...  NaN    NaN      1   \n",
-       "1     Oh God, I would be so mad if it happened to me...  NaN    NaN      6   \n",
-       "2     That's insane. I wish I had advice but everyth...  NaN    NaN      2   \n",
-       "3     The fact this is true absolutely disgusting. A...  NaN    NaN     15   \n",
-       "4     This just makes me sick to my stomach. I guess...  NaN    NaN      6   \n",
-       "...                                                 ...  ...    ...    ...   \n",
-       "2429  Well I think the more people see us the better...  NaN    NaN      3   \n",
-       "2430  Yep the ZRA and the Aero Z are the adjustable ...  NaN    NaN      3   \n",
-       "2431  This is a very ambitious topic and I respect y...  1.0    NaN      1   \n",
-       "2432  Its strange- I grew up out here and then moved...  1.0    0.0      1   \n",
-       "2433  The only exercise that I can do is gentle swim...  NaN    NaN      2   \n",
-       "\n",
-       "      controversiality  gilded distinguished  \\\n",
-       "0                    0       0           NaN   \n",
-       "1                    0       0           NaN   \n",
-       "2                    0       0           NaN   \n",
-       "3                    0       0           NaN   \n",
-       "4                    0       0           NaN   \n",
-       "...                ...     ...           ...   \n",
-       "2429                 0       0           NaN   \n",
-       "2430                 0       0           NaN   \n",
-       "2431                 0       0           NaN   \n",
-       "2432                 0       0           NaN   \n",
-       "2433                 0       0           NaN   \n",
-       "\n",
-       "                             anonymized_body_lemmatized  keyword  sentiment  \\\n",
-       "0     ['That', 'be', 'the', 'dumb', ',', 'most', 'fu...     dumb          1   \n",
-       "1     ['Oh', 'God', ',', 'I', 'would', 'be', 'so', '...     dumb          1   \n",
-       "2     ['That', \"'s\", 'insane', '.', 'I', 'wish', 'I'...   insane          1   \n",
-       "3     ['The', 'fact', 'this', 'be', 'true', 'absolut...    idiot          1   \n",
-       "4     ['This', 'just', 'make', 'me', 'sick', 'to', '...    crazy          1   \n",
-       "...                                                 ...      ...        ...   \n",
-       "2429  ['Well', 'I', 'think', 'the', 'more', 'people'...   insane          1   \n",
-       "2430  ['Yep', 'the', 'ZRA', 'and', 'the', 'Aero', 'Z...    crazy          1   \n",
-       "2431  ['This', 'be', 'a', 'very', 'ambitious', 'topi...    crazy          1   \n",
-       "2432  ['Its', 'strange-', 'I', 'grow', 'up', 'out', ...     slow          1   \n",
-       "2433  ['The', 'only', 'exercise', 'that', 'I', 'can'...  cripple          1   \n",
-       "\n",
-       "     post_sentiment_label  post_sentiment_score  Relevance  token_count  \\\n",
-       "0                negative              0.962408          0           41   \n",
-       "1                negative              0.958311          1           41   \n",
-       "2                negative              0.952975          1           37   \n",
-       "3                negative              0.952214          1           62   \n",
-       "4                negative              0.951125          0           19   \n",
-       "...                   ...                   ...        ...          ...   \n",
-       "2429             positive              0.545418          1          142   \n",
-       "2430             positive              0.533189          1          199   \n",
-       "2431             positive              0.523853          1         1135   \n",
-       "2432             positive              0.473465          1          331   \n",
-       "2433             positive              0.440805          1          116   \n",
-       "\n",
-       "      token_type_count  \n",
-       "0                   36  \n",
-       "1                   34  \n",
-       "2                   31  \n",
-       "3                   46  \n",
-       "4                   19  \n",
-       "...                ...  \n",
-       "2429                86  \n",
-       "2430               114  \n",
-       "2431               426  \n",
-       "2432               196  \n",
-       "2433                71  \n",
-       "\n",
-       "[2434 rows x 17 columns]"
+       "                model    acc      prec   rec  f1-score\n",
+       "0      llama2_7b_pred  0.585  0.547472  1.00  0.707261\n",
+       "1     llama2_13b_pred  0.850  0.888889  0.80  0.842105\n",
+       "2       TimeLMs_label  0.500  0.500000  1.00  0.666667\n",
+       "3    hatexplain_label  0.500  0.500000  1.00  0.666667\n",
+       "4   llama2_7b_FL_pred  0.730  0.652871  0.99  0.786254\n",
+       "5  llama2_13b_FL_pred  0.665  1.000000  0.33  0.494505"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "pd.DataFrame(summary)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1798934328.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    df['post_sentiment_label'].apply(lambda x: if x == 'negative' then 1, else 0)\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "df['post_sentiment_label'].apply(lambda x: if x == 'negative' then 1, else 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
